<resources>
    <string name="app_name">Ulul Azmi</string>


    <!--    string halaman nabi Nuh-->
    <string name="nuh" translatable="false">Nabi Nuh ﷺ</string>
    <string name="nuh_info1">
       Nabi Nuh bin Lamik bin Metusyalih dari keturunan Idris serta keturunan Nabi Syits bin Adam diperkirakan hidup pada tahun 3993-3043 SM dan diangkat menjadi Nabi pada tahun 3650 SM.

Nabi Nuh AS diperkirakan tinggal di wilayah yang kini disebut sebagai Iraq. Para ahli sejarah banyak menyebutkan bahwa beliau wafat di Mekkah dan memiliki 4 anak laki-laki. Nama Nuh sendiri disebutkan sebanyak 43 kali dalam Al-Quran.

    </string>
    <string name="nuh_info2">
        Dalam kisah Nabi Nuh AS, disebutkan bahwa beliau memulai perjalanan dakwahnya sejak usia 40 tahun hingga usia 950 tahun. Beliau menyampaikan kebenaran kepada kaumnya agar kembali menyembah Allah SWT sebagai satu-satunya Tuhan yang berhak disembah.
Namun, dakwahnya tak pernah diterima oleh kaumnya. Nabi Nuh AS selalu dicemooh, bahkan dihina. Kesabaran Nabi Nuh AS juga diuji saat istri dan anaknya yang bernama Kan’an termasuk pada golongan orang-orang yang menentang dakwah Nabi Nuh AS.
Setelah berdakwah selama 950 tahun lamanya namun tidak ada yang mau mengikuti beliau kecuali beberapa orang saja, maka terpaksa Nabi Nuh AS memohon kepada Allah SWT dengan berdoa, sebagaimana disebut dalam Al-Qur an QS. Nuh ayat 26-27:
    </string>


    <!-- String halaman nabi ibrahim-->
    <string name="ibrahim">Nabi Ibrahim</string>
    <string name="ibrahim_info1">
        Nabi Ibrahim bin Azar bin Nahur adalah seorang nabi dari keturunan Sam bin Nuh. Beliau diperkirakan hidup pada tahun 1997-1822 SM dan diangkat menjadi Nabi pada tahun 1900 SM. Beliau tinggal di wilayah yang saat ini dikenal sebagai Irak. Beliau wafat di Al-Khalil, Hebron, Palestina. Nama Ibrahim disebutkan sebanyak 69 kali dalam Al-Quran.

Dalam kisah Nabi Ibrahim, disebutkan bahwa sejak bayi, Nabi Ibrahim sudah diasingkan ke dalam gua karena adanya perintah dari Raja Namrud (raja yang berkuasa pada saat itu) untuk membunuh setiap bayi laki-laki yang baru lahir.

Setelah dewasa, beliau menyampaikan dakwahnya dengan tidak mudah, karena harus berhadapan dengan Raja Namrud beserta seluruh masyarakat yang saat itu menyembah berhala, termasuk kedua orang tuanya sendiri. Bahkan, ayah Nabi Ibrahim AS berprofesi sebagai pembuat patung berhala.

Mukzizat Nabi Ibrahim yang pertama turun ketika beliau menghadapi Raja Namrud untuk menyampaikan dakwahnya. Raja Namrud yang gusar akibat patung berhalanya dihancurkan oleh Nabi Ibrahim kemudian menangkap Ibrahim dan berusaha membakarnya hidup-hidup. Namun, Allah SWT memberikan mukjizat kepada Nabi Ibrahim AS, yaitu api yang membakar tubuhnya menjadi dingin, sehingga tubuh beliau tidak terbakar oleh api.

Setelah kejadian tersebut, beratus tahun kemudian, dikisahkan bahwa Nabi Ibrahim telah hidup bahagia dan menikah dengan perempuan bernama Sarah. Namun, mereka berdua tidak kunjung dikaruniai anak meskipun sudah lama menikah. Sarah kemudian meminta Ibrahim untuk menikahi seorang budak bernama Hajar. Setelah menikah dengan Hajar, Ibrahim pun dikaruniai seorang anak yang diberi nama Ismail.

Setelah Ismail lahir, Ibrahim harus menerima perintah sulit dari Allah SWT yaitu melepas istri dan anaknya yang baru lahir dan sangat dicintainya itu ke tanah gersang di Makkah. Karena kesabaran dan kepatuhannya pada Allah SWT, perintah itu pun dilaksanakan.

Namun, bertahun-tahun kemudian, masih ada lagi perintah lebih berat yang harus diterima Ibrahim, yaitu harus mengorbankan Ismail yang pada saat itu baru berusia remaja. Hal ini pun beliau laksanakan atas kepatuhannya terhadap Allah. Melihat kepatuhannya tersebut, Allah SWT pun menurunkan mukjizat, yakni Ismail digantikan dengan seekor domba (kambing kibas), yang kemudian mendasari adanya Hari Raya Idul Adha bagi umat Muslim.
    </string>


    <!--    string halaman nabi musa lupa jir-->
    <string name="musa">Nabi Musa</string>
    <string name="musa_info1">
       Nabi Musa bin Imran berasal dari keturunan Ya’qub bin Ishak. Beliau diperkirakan hidup pada tahun 1527-1408 SM dan diangkat menjadi Nabi pada tahun 1450 SM. Beliau ditugaskan berdakwah kepada Bani Israel di Mesir yang pada saat itu dikuasai Raja Firaun. Beliau wafat di Tanah Tih dan mempunyai 2 orang anak.

Nabi Musa AS menjadi salah satu pemimpin yang mampu bersikap tegas. Beliau lahir di lingkungan istana Raja Firaun dan dibesarkan oleh istri Firaun yang bernama Siti Asiah.

Allah SWT menurunkan wahyu pertama-Nya kepada Nabi Musa AS di Bukit Sinai. Di sinilah kisah Nabi Musa AS bersama saudaranya, Nabi Harun AS, memulai dakwah di hadapan Firaun yang mengakui dirinya sebagai Tuhan.

Namun, Firaun tidak pernah menerima dakwah tersebut, sehingga mereka berdua diusir dari istana. Sejak saat itu, Firaun mengumpulkan para ahli sihir untuk membunuh Nabi Musa AS. Lalu, mukzizat Nabi Musa datang kepadanya, di mana sebuah tongkat yang dibawa Nabi Musa AS dapat menjelma menjadi ular besar yang melahap ular-ular para penyihir Firaun. Firaun pun mengirimkan bala tentaranya untuk membunuh Nabi Musa AS.

Sampai pada akhirnya Nabi Musa bersama kaum Bani Israil berada di tepi lautan merah. Kemudian Allah SWT kembali turunkan mukjizat, yakni beliau diberi kemampuan untuk dapat membelah lautan tersebut dengan tongkat dan menyeberangi lautan untuk menghindar dari kejaran Firaun. Sementara Firaun beserta bala tentaranya tenggalam di Laut Merah.

    </string>

    <!--    string halaman nabi isa-->
    <string name="isa">Nabi Isa</string>
    <string name="isa_info1">
        Nabi Isa bin Maryam binti Imran berasal dari keturunan Sulaiman bin Daud. Diperkirakan hidup pada tahun 1 SM-32M dan diangkat menjadi nabi pada tahun 29M. Beliau ditugaskan berdakwah kepada Bani Israil di Palestina.

Beliau tidak wafat, melainkan diangkat ke sisi Allah SWT. Nabi Isa AS Disebutkan sebanyak 25 kali di dalam Al-Quran. Banyak hal yang menunjukkan bahwa Isa memiliki kesabaran dan keteguhan dalam menyampaikan ajaran Allah.

Nabi Isa As merupakan putra dari Maryam yang dilahirkan tanpa seorang ayah atas kuasa Allah SWT. Karena itu, beliau dan Maryam mendapat cemooh dari penduduk kampung halamannya.

Allah SWT kemudian menurunkan mukjizat berupa kemampuan berbicara kepadanya saat masih bayi untuk membuktikan bahwa beliau memang lahir tanpa seorang ayah atas seizin Allah SWT. Mukzizat Nabi Isa AS lainnya selain kemampuan berbicara saat masih bayi, yaitu mampu menyembuhkan orang sakit dan menghidupkan orang mati atas seizin Allah SWT.

Baca Juga: Keragaman 6 Agama di Indonesia dan Tempat Ibadahnya

Allah SWT mengutusnya sebagai rasul di Bait Al-Maqdis setelah menginjak usia 30 tahun. Allah SWT juga mengajarkan kepadanya kitab Taurat dan menurunkan sebuah kitab yang diberi nama Injil.

Salah satu kisah Nabi Isa AS setelah dewasa, disebutkan saat beliau sedang menjalankan dakwahnya, beliau diancam dan direncanakan untuk dibunuh dengan cara disalib. Namun, Allah SWT menyelamatkan Nabi Isa AS dengan cara diangkat ke langit, sebagaimana firman Allah SWT dalam surat An-Nisa ayat 157:



وَقَوْلِهِمْ إِنَّا قَتَلْنَا ٱلْمَسِيحَ عِيسَى ٱبْنَ مَرْيَمَ رَسُولَ ٱللَّهِ وَمَا قَتَلُوهُ وَمَا صَلَبُوهُ وَلَٰكِن شُبِّهَ لَهُمْ ۚ وَإِنَّ ٱلَّذِينَ ٱخْتَلَفُوا۟ فِيهِ لَفِى شَكٍّ مِّنْهُ ۚ مَا لَهُم بِهِۦ مِنْ عِلْمٍ إِلَّا ٱتِّبَاعَ ٱلظَّنِّ ۚ وَمَا قَتَلُوهُ يَقِينًۢا



Artinya:

“Dan karena ucapan mereka: “Sesungguhnya kami telah membunuh Al Masih, Isa putra Maryam, Rasul Allah”, padahal mereka tidak membunuhnya dan tidak (pula) menyalibnya, tetapi (yang mereka bunuh ialah) orang yang diserupakan dengan Isa bagi mereka. Sesungguhnya orang-orang yang berselisih paham tentang (pembunuhan) Isa, benar-benar dalam keragu-raguan tentang yang dibunuh itu. Mereka tidak mempunyai keyakinan tentang siapa yang dibunuh itu, kecuali mengikuti persangkaan belaka, mereka tidak (pula) yakin bahwa yang mereka bunuh itu adalah Isa.”
    </string>
    <string name="muhammad">Nabi Muhamad</string>
    <string name="muhammad_info">
        <![CDATA[
        Nabi Muhammad bin Abdullah bin Abdul Muttalib berasal dari keturunan Ismail bin Ibrahim. Diperkirakan hidup pada tahun 571M-632M dan diangkat menjadi Nabi pada tahun 610M. Beliau ditugaskan berdakwah kepada seluruh manusia dan alam semesta.

        Semasa hidupnya, Nabi Muhammad SAW tinggal di Mekkah dan Madinah, kemudian wafat di Madinah dan meninggalkan 7 orang anak. Nabi Muhammad SAW disebutkan namanya sebanyak 5 kali di dalam Al-Quran.

        Kisah Nabi Muhammad menyebutkan bahwa beliau mendapat gelar ulul azmi karena sejak kecil sampai dewasa, beliau selalu mengalami masa-masa sulit. Pada usia 6 tahun, Rasulullah SAW sudah menjadi yatim piatu. Setelah dewasa, beliau harus membantu pamannya yang telah merawatnya sejak kecil. Tantangan terberat yang pernah dihadapi Rasulullah SAW adalah setelah diangkatnya beliau menjadi seorang rasul.

        Ketika berdakwah, penentangan tidak hanya datang dari masyarakat luas, tetapi juga dari Abu Lahab yang juga merupakan pamannya. Rasulullah SAW juga harus menderita tatkala Bani Hasyim diboikot (diasingkan) ke sebuah lembah akibat dakwah yang dilakukan.

        Selain itu, masih banyak lagi kesabaran dan masa-masa sulit yang dihadapi Nabi Muhammad SAW hingga beliau wafat. Mukzizat Nabi Muhammad yang terbesar adalah kitab suci Al-Qur’an, yang hingga kini dijadikan sebagai pedoman hidup bagi seluruh umat Muslim di dunia karena terjamin kebenarannya.
        ]]>
    </string>
</resources>